# knn

./: .gitignore  CMakeLists.txt  FindClangTidy.cmake  FindOpenBlas.cmake  FindOpenMPI.cmake  README.md  cmake.patch  converter.cpp  preprocess_csvs.py  preprocessor.cpp  requirements.txt  sparse_matrix_to_csv.py
lib/: knn_lib.cpp  knn_lib.hpp  knn_result.cpp  knn_result.hpp  rapidcsv.h
src/: knn_v0.cpp  knn_v1.cpp  knn_v2.cpp
